# HabitCoach

./: .gitignore  CLAUDE.md  README.md  branding-mockup.html  timer-mockup.html
HabitCoach/: project.yml
HabitCoach/HabitCoach/: ContentView.swift  HabitCoachApp.swift  Info.plist  StoreKit.storekit
HabitCoach/HabitCoach.xcodeproj/: project.pbxproj
HabitCoachRN/: App.tsx  app.json  eas.json  package-lock.json  package.json
HabitCoachRN/src/models/: types.ts  (+2 more)
habit-reminder-wearable/: report.md  requirements.md  stakeholder_interview.md
research/: CHAT_LOG_GUIDELINES.md  PYTHON_GUIDELINES.md  RESEARCH_GUIDELINES.md  chat_messages.md  pyproject.toml
research/anime/: RESEARCH_GUIDE.md  chat_messages.md  recommendations_2025.md  report.md  user_profile.md
research/book-recommendations/: README.md  RECOMMENDATION_SYSTEM.md  RESEARCH_GUIDE.md  chat_messages.md  goodreads_format.md  pyproject.toml  user_profile.md
research/book-recommendations/data/: goodreads_export_raw.csv  read_books.csv  read_books_with_genres.csv
research/book-recommendations/goodreads/: __init__.py  __main__.py  analyze.py  clean.py  cli.py  scrape.py
research/book-recommendations/output/: recommendations.md  stats.txt
research/book-recommendations/recommend/: README.md  __init__.py  __main__.py  candidates.py  cli.py  config.py  library.py  report.py  scrape.py  search.py
research/habit-reminder-wearable/: background.md  client_feasibility_report.md
research/stocks/: README.md  RECOVERY.md  __init__.py  adjust.py  chat_messages.md  config.py  data.py  main.py  plot.py  recovery.py
(+65 files in other folders)
