[project]
name = "research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "yfinance>=1.0",
]

[tool.uv.workspace]
members = [
    "book-recommendations",
]
